[package]
name = "afn"
version = "0.1.0"
edition = "2021"
[dependencies]
minieth = { path = "../minieth" }
miniabi = { path = "../miniabi" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1"
serde = "1"
argh = "0.1"
toml = "0.7"
bit-set = "0.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
