[package]
name = "afn"
version = "0.1.0"
edition = "2021"
[dependencies]
minieth = { path = "../minieth" }
miniabi = { path = "../miniabi" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1"
serde = "1"
argh = "0.1"
toml = "0.8"
bit-set = "0.5"
rusqlite = { version = "0.30", features = ["bundled"] }
rand = "0.8"
rand_chacha = "0.3"
zstd = "0.13.0"
chrono = { version = "0.4.31", default-features = false, features = ["clock"]}
